# gcc-vcg-plugin

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
example/: README  dump-cgraph.vcg  dump-dominance.vcg  dump-function-main.vcg  dump-function.vcg  dump-gimple-hierarchy.vcg  dump-pass-lists.vcg  dump-passes.vcg  dump-rtx.vcg  dump-tree-0xb7f62f00.vcg  dump-tree-hierarchy-4.6.vcg  dump-tree-hierarchy-4.7.vcg  dump-tree-hierarchy.vcg  dump-tree.vcg  foo.c  foo.c.cgraph-callee.vcg  foo.c.cgraph-caller.vcg  foo.c.cgraph.vcg  foo.c.passes.vcg
example/cgraph/: gcc-bb.c.cgraph-callee.vcg  gcc-bb.c.cgraph-caller.vcg  gcc-bb.c.cgraph.vcg  gcc-cgraph.c.cgraph-callee.vcg  gcc-cgraph.c.cgraph-caller.vcg  gcc-cgraph.c.cgraph.vcg  gcc-dominance.c.cgraph-callee.vcg  gcc-dominance.c.cgraph-caller.vcg  gcc-dominance.c.cgraph.vcg  gcc-function.c.cgraph-callee.vcg  gcc-function.c.cgraph-caller.vcg  gcc-function.c.cgraph.vcg  gcc-gimple-hierarchy.c.cgraph-callee.vcg  gcc-gimple-hierarchy.c.cgraph-caller.vcg  gcc-gimple-hierarchy.c.cgraph.vcg  gcc-loop.c.cgraph-callee.vcg  gcc-loop.c.cgraph-caller.vcg  gcc-loop.c.cgraph.vcg  gcc-passes.c.cgraph-callee.vcg  gcc-passes.c.cgraph-caller.vcg  gcc-passes.c.cgraph.vcg  gcc-plugin-api.c.cgraph-callee.vcg  gcc-plugin-api.c.cgraph-caller.vcg  gcc-plugin-api.c.cgraph.vcg  gcc-rtx.c.cgraph-callee.vcg  gcc-rtx.c.cgraph-caller.vcg  gcc-rtx.c.cgraph.vcg  gcc-tree-hierarchy.c.cgraph-callee.vcg  gcc-tree-hierarchy.c.cgraph-caller.vcg  gcc-tree-hierarchy.c.cgraph.vcg  vcg-plugin.c.cgraph-callee.vcg  vcg-plugin.c.cgraph-caller.vcg  vcg-plugin.c.cgraph.vcg
libgdl/: Makefile.am  Makefile.in  gdl-attr.c  gdl.c  gdl.h
vcg-plugin/: Makefile.am  Makefile.in  gcc-bb.c  gcc-cgraph.c  gcc-dominance.c  gcc-function.c  gcc-gimple-hierarchy.c  gcc-loop.c  gcc-passes.c  gcc-plugin-api.c  gcc-rtx.c  gcc-tree-4.6.c  gcc-tree-4.7.c  gcc-tree-hierarchy.c  gcc-tree.c  vcg-plugin.c  vcg-plugin.gdbinit  vcg-plugin.h  vcg_plugin.gdbinit
