# Makefile.am
#
# Copyright (C) 2009, 2010, 2011 Mingjie Xing, mingjie.xing@gmail.com.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

ACLOCAL_AMFLAGS = -I m4

export GMP_INC=@gmp_inc@
export GMP_LIB=@gmp_lib@

SUBDIRS = libgdl vcg-plugin

EXTRA_DIST = example

dist-hook:
	rm -rf `find $(distdir)/example -name ".svn"`

